# x64_dbg_mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MCP_CLIENT_CONFIG.md  README.md  SECURITY.md  SETUP.md  TODO.md  eslint.config.mjs  mcp-client.example.json  mcp-client.x32.example.json  package-lock.json  package.json  tsconfig.json  x32dbg-mcp.config.example.json  x64dbg-mcp.config.example.json
.github/workflows/: ci.yml
bridge/: x32dbgpy_bridge.py  x64dbgpy_bridge.py
bridge/minidump/: dump-06012026_0709410479.dmp  dump-06012026_0744350952.dmp  dump-06012026_0858430526.dmp  dump-06012026_0859250445.dmp  dump-06012026_0902450807.dmp  dump-06012026_0920100823.dmp
native/x64dbg_mcp_native/: CMakeLists.txt  README.md  x64dbg_mcp_native.cpp
scripts/: build_native.ps1  build_native_x32.ps1  install_codex.ps1  install_native.ps1  install_native_x32.ps1  mcp_smoke_test.mjs  package_native.ps1
src/: config.ts  index.ts  observability.ts  security.ts
src/analysis/: graphs.ts
src/x64dbg/: client.ts  protocol.ts
tests/: integration.test.mjs  protocol.test.mjs  tools.test.mjs
